HVAC Backup 2/objects/Product_Served__c(1).object
<CustomObject>
    <fields>
        <fullName>CP_Code__c</fullName>
        <formula>Channel_Partner__r.CP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Served</relationshipLabel>
        <relationshipName>Product_Served</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Product_Family__r.Division_Lookup__r.Name</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Code__c</fullName>
        <formula>Product_Family__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Product Served</relationshipLabel>
        <relationshipName>Product_Served</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Served</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Partner__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Served</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>